--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,42 @@
-body {
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.app{
+  background-color: rgb(243, 243, 243);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px;
+  width: 500px;
+  margin-top: 40px;
+ 
+}
+
+.list-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+
+}
+
+.button-container{
+ display: flex;
+ align-content: center;
+}
+
+.button-container button {
+  background-color: #363636;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  margin: 0px 5px;
+  font-weight: 500;
+  cursor: pointer;
 }
