--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,9 +26,9 @@ body{
 }
 
 
-.button-container{
- display: flex;
- align-content: center;
+.button-container {
+  display: flex;
+  align-content: center;
 }
 
 .button-container button {
@@ -40,6 +40,11 @@ body{
   margin: 0px 5px;
   font-weight: 500;
   cursor: pointer;
+  transition: opacity 0.3s; /* Add transition for opacity change */
+}
+
+.button-container button:hover {
+  opacity: 0.7; /* Reduce opacity on hover */
 }
 
 .list-item{
@@ -85,5 +90,54 @@ body{
 .edit svg,
 .delete svg {
   margin-right: 5px;
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  width: 500px;
+  background-color: white;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 1px 4px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
+  outline: none; /* Ensure outline is removed */
+}
+
+.modal .form-title-container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal .form-title-container button{
+  border: none;
+  background-color: transparent;
+  
+}
+
+.modal form{
+  display: flex;
+  flex-direction: column;
+} 
+
+.modal label{
+  font-size: 13px;
+
+}
+
+input{
+  margin: 11px 0;
+  padding: 12px 16px;
+  border-radius: 5px;
+
 }
 
