--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -141,3 +141,86 @@ input{
 
 }
 
+.auth-container {
+  display: flex;
+  justify-content: center;
+  margin: 40px;
+}
+
+.auth-container-box {
+  width: 300px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.auth-container-box form {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.auth-container-box form h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.input-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.input-icon {
+  margin-right: 10px;
+  color: #888;
+}
+
+input[type='email'],
+input[type='password'] {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+  background-color: transparent;
+  color: #333;
+}
+
+input[type='submit'] {
+  border: none;
+  padding: 10px;
+  color: white;
+  background-color: #3d79f3;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-weight: bold;
+}
+
+input[type='submit']:hover {
+  background-color: #555;
+}
+
+.auth-options {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.auth-options button {
+  flex: 1;
+  border: none;
+  padding: 10px;
+  color: white;
+  background-color: #363636;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-weight: bold;
+}
+
+.auth-options button:hover {
+  background-color: #555;
+}
+
+
