--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,8 @@ body {
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  overflow-x: hidden;
+  
+ 
   
 }
 
@@ -16,6 +17,8 @@ body {
 }
 
 .navbar {
+  position: fixed; /* Set position to fixed */
+  top: 0; /* Stick the navbar to the top */
   background-color: #ffffff;
   color: #363636;
   display: flex;
@@ -24,7 +27,14 @@ body {
   padding: 10px 20px;
   width: 100%; /* Set width to cover the whole screen */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle drop shadow */
+  z-index: 1000; /* Ensure the navbar appears above other content */
+  margin-bottom: 40px;
 }
+
+.navbar .button {
+  padding-left: 20px;
+}
+
 
 
 .logo {
@@ -73,6 +83,7 @@ body {
   margin-right: 50px;
 }
 
+
 .button-container button.signout:hover {
   background-color: #c82333; /* Darker shade for hover effect */
 }
@@ -82,8 +93,14 @@ body {
   padding: 10px;
   border-radius: 10px;
   margin: 20px auto; /* Set auto margin to center horizontally */
-  width: 50%; /* Set app width to 50% */
+  width: 70%; /* Set app width to 50% */
   align-items: center; /* Assuming you're using this within a flex container */
+  margin-top: 80px;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
@@ -93,7 +110,11 @@ body {
   padding: 16px;
   margin-bottom: 16px;
   margin-top: 10px;
+  width: 100%; /* Adjusted width to accommodate margins */
+  min-width: 200px; /* Set a minimum width for responsiveness */
+  height: 15%; /* Half of the width */
 }
+
 
 .card-header {
   display: flex;
@@ -102,7 +123,7 @@ body {
 
 .tick-icon {
   margin-right: 8px;
-  color: green;
+  color: rgb(100, 153, 227);
 }
 
 .card-footer {
@@ -211,20 +232,24 @@ body {
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .modal {
-  width: 500px;
+  position: fixed; /* Position the modal relative to the viewport */
+  top: 50%; /* Place the top edge of the modal at the vertical center of the viewport */
+  left: 50%; /* Place the left edge of the modal at the horizontal center of the viewport */
+  transform: translate(-50%, -50%); /* Center the modal precisely */
+  width: 500px; /* Set the width of the modal */
   background-color: white;
   padding: 30px;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0 1px 4px 0, rgba(0, 0, 0, 0.1) 0 0 0 1px;
   outline: none; /* Ensure outline is removed */
 }
+
 
 .modal .form-title-container{
   display: flex;
@@ -338,15 +363,19 @@ input[type='submit']:hover {
 }
 
 .confirm-delete-modal {
-    position: absolute;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    padding: 16px;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 0;
-    pointer-events: none;
+  position: fixed; /* Position the modal relative to the viewport */
+  top: 50%; /* Place the top edge of the modal at the vertical center of the viewport */
+  left: 50%; /* Place the left edge of the modal at the horizontal center of the viewport */
+  transform: translate(-50%, -50%); /* Center the modal precisely */
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding: 16px;
+  transition: opacity 0.3s ease-in-out;
+  opacity: 0;
+  pointer-events: none;
 }
+
 
 .confirm-delete-modal.show {
     opacity: 1;
@@ -425,7 +454,9 @@ input[type='submit']:hover {
 
 .activities{
   display: flex;
+  
 }
+
 .add-activity-button {
   background-color: transparent;
   border: none;
@@ -456,5 +487,55 @@ input[type='submit']:hover {
 
 .activity-button:hover {
   background-color: #555; /* Darker background color on hover */
+}
+
+
+.edit-activity-modal {
+  position: fixed; /* Position the modal relative to the viewport */
+  top: 50%; /* Place the top edge of the modal at the vertical center of the viewport */
+  left: 50%; /* Place the left edge of the modal at the horizontal center of the viewport */
+  transform: translate(-50%, -50%); /* Center the modal precisely */
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000; /* Adjust z-index as needed */
+}
+
+
+.edit-activity-modal h2 {
+  margin-bottom: 10px;
+}
+
+.edit-activity-modal input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-group button {
+  padding: 8px 16px;
+  cursor: pointer;
+}
+
+.button-group button.save {
+  color: #363636;
+}
+.button-group button.delete {
+  color: #363636;
+}
+
+.button-group button.complete {
+ 
+  color: #363636;
+}
+
+.button-group button.cancel {
+  color: #363636;
 }
 
