--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,12 +9,6 @@ body {
   
 }
 
-.container {
-  width: 100vw;
-  height: 100vw;
-  
-  background-color: #fdfdfd;
-}
 
 .navbar {
   position: fixed; /* Set position to fixed */
@@ -93,14 +87,17 @@ body {
   padding: 10px;
   border-radius: 10px;
   margin: 20px auto; /* Set auto margin to center horizontally */
-  width: 70%; /* Set app width to 50% */
+  width: 80%; /* Set app width to 50% */
   align-items: center; /* Assuming you're using this within a flex container */
   margin-top: 80px;
 }
 
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* or any other justification you prefer */
+    width: 40%;
+    font-size: 12px;
 }
 
 .card {
@@ -118,12 +115,24 @@ body {
 
 .card-header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
+.header-content {
+  display: flex;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+}
+
+
 .tick-icon {
   margin-right: 8px;
-  color: rgb(100, 153, 227);
+  color: #363636;
 }
 
 .card-footer {
