--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,30 +1,25 @@
 body {
   margin: 0;
   padding: 0;
-  justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  
- 
-  
 }
 
 
+
 .navbar {
-  position: fixed; /* Set position to fixed */
-  top: 0; /* Stick the navbar to the top */
+  position: fixed;
+  top: 0;
   background-color: #ffffff;
   color: #363636;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  width: 100%; /* Set width to cover the whole screen */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add subtle drop shadow */
-  z-index: 1000; /* Ensure the navbar appears above other content */
+  width: 100%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
   margin-bottom: 40px;
 }
-
 .navbar .button {
   padding-left: 20px;
 }
@@ -87,17 +82,16 @@ body {
   padding: 10px;
   border-radius: 10px;
   margin: 20px auto; /* Set auto margin to center horizontally */
-  width: 80%; /* Set app width to 50% */
-  align-items: center; /* Assuming you're using this within a flex container */
+  width: 90%; /* Set app width to 80% */
   margin-top: 80px;
 }
 
+
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* or any other justification you prefer */
-    width: 40%;
-    font-size: 12px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  font-size: 12px;
 }
 
 .card {
@@ -107,9 +101,8 @@ body {
   padding: 16px;
   margin-bottom: 16px;
   margin-top: 10px;
-  width: 100%; /* Adjusted width to accommodate margins */
-  min-width: 200px; /* Set a minimum width for responsiveness */
-  height: 15%; /* Half of the width */
+  width: calc(40% - 20px); /* Adjusted width to accommodate margins */
+  min-width: 200px;
 }
 
 
@@ -260,6 +253,8 @@ body {
 }
 
 
+
+
 .modal .form-title-container{
   display: flex;
   justify-content: space-between;
@@ -391,16 +386,12 @@ input[type='submit']:hover {
     pointer-events: auto;
 }
 
-.activity-container {
- 
-}
-
 .activity-container input {
-  width: 96%;
+  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  resize: vertical; /* Allow vertical resizing */
+  resize: vertical;
 }
 
 .activity-container button {
@@ -548,3 +539,53 @@ input[type='submit']:hover {
   color: #363636;
 }
 
+@media screen and (max-width: 768px) {
+  .card {
+    width: calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+    width: calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card-container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .app {
+    width: 90%; /* Adjusted width for smaller screens */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .app {
+    width: 95%; /* Adjusted width for even smaller screens */
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .modal {
+    width: 90%; /* Adjusted width for smaller screens */
+  }
+
+  .confirm-delete-modal {
+    width: 50%; /* Adjusted width for smaller screens */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .modal {
+    width: 95%; /* Adjusted width for even smaller screens */
+  }
+
+  .confirm-delete-modal {
+    width: 50%; /* Adjusted width for even smaller screens */
+  }
+}
